# VerdicaGNOSISLEAP

./: .gitignore  DATASET_SYNC_WORKFLOW.md  DATA_ACCESS_GUIDE.md  FINAL_STATUS_UPDATE.md  GIT_LOCK_FIXED.md  HYBRID_CHEMPROP_ARCHITECTURE.md  MODAL_MOLBERT_SETUP.md  NEXT_AGENT_README.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHARMACEUTICAL_DATASET_COMPLETE.md  README.md  REAL_DATASET_SUMMARY.md  add_smiles_to_clinical_trials.py  aggressive_api_collector.py  ai_modules_test.py  backend_test.py  cell_line_endpoint_test.py  cell_line_model_test.py  check_real_dataset_progress.py  chemberta_clinical_outcome_trainer.py  chemberta_neural_predictor.py  chemberta_training_example.py  collect_safety_and_failed_trials.py  complete_smiles_integration.py  comprehensive_api_fetcher.py  comprehensive_smiles_finder.py  create_clean_github_datasets.py  create_comprehensive_real_dataset.py  create_integrated_real_dataset.py  create_massive_real_dataset.py  create_real_dataset.py  create_trials_with_smiles.py  curl_based_gnosis_test.py  debug_pic50_values.py  debug_prediction_endpoints.py  demo_both_models.py  demo_cell_line_model.py  deploy_chemprop_backend.py  enhanced_gnosis_i_test.py  enhanced_gnosis_predictor.py  (+54 more)
veridica-data/: .env.example  Makefile  build_master_simple.py  pyproject.toml
veridica-data/csv_exports/: openfda_approval_cache.json  tox.csv  veridica_approval_prediction.csv  veridica_chembert_100_percent_real.csv  veridica_chembert_ready.csv  veridica_train_approval.timesafe.csv
veridica-data/data/: clinical.csv  clinical.parquet  master.parquet  tox.parquet  veridica_train_approval.timesafe.csv
veridica-data/data/cache/: chembl_herg.parquet
veridica-data/scripts/: dedup.py  fetch_openfda.py  fix_structures.py  make_training_view.py  production_ready_fixer.py  remove_all_synthetic_data.py
veridica-data/src/connectors/: chembl_herg_ic50.py  chembl_numeric_tox.py  openfda_approvals.py
veridica-data/src/pipelines/: append_approvals.py  append_provenance.py  augment_numeric_tox.py  augment_numeric_tox2.py  make_training_view.py
veridica-data/src/transforms/: add_provenance.py
veridica-data/src/veridica_data/: __init__.py
(+516 files in other folders)
